tests/integration/features/commands/no_command/01_no_command_no_args/test.itest
RUN: %expect_exit 2 %strictdoc 2>&1 | filecheck %s --dump-input=fail

CHECK: strictdoc: error: the following arguments are required: command
